// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator erd {
  provider = "prisma-erd-generator"
  output   = "../ERD.md"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

// Tabela do bolão
model Pool {
  id       String   @id @default(cuid())
  title    String
  code     String   @unique
  createAt DateTime @default(now()) // Pegar a data e hora atual
  ownerId  String?

  participants Participant[]
  owner        User?         @relation(fields: [ownerId], references: [id])
}

// Tabela participantes
model Participant {
  id     String @id @default(cuid())
  userId String
  poolId String

  guesses Guess[]
  user    User    @relation(fields: [userId], references: [id])
  pool    Pool    @relation(fields: [poolId], references: [id])

  @@unique([userId, poolId])
}

// tabela do usuário
model User {
  id        String   @id @default(cuid())
  name      String
  email     String   @unique
  avatarUrl String?
  createdAt DateTime @default(now())

  participatingAt Participant[]
  ownPool         Pool[]
}

// Tabela de joogo
model Game {
  id   String   @id @default(cuid())
  date DateTime

  firstTeamCountryCode  String
  secondTeamCountryCode String

  guesses Guess[]
}

// Tabela de palpite
model Guess {
  id String @id @default(cuid())

  firstTeamPoints  Int
  secondTeamPoints Int
  createdAt        DateTime @default(now())
  gameId           String

  participant   Participant @relation(fields: [participantId], references: [id])
  game          Game        @relation(fields: [gameId], references: [id])
  participantId String
}
